fix: Вносит правки в наименование картинок

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="header" data-test="header">
       <a class="header-logo_link" href="index.html">
-        <img class="logo_image" src="images/logos/logo-sedona.svg" alt="Логотип сайта об отдыхе в городе Седона: перевёрнутый треугольник голубого цвета со вставкой с изображением местных достопримечательностей и надписью City of Sedona" width="140" height="70">
+        <img class="logo_image" src="images/logos/sedona.svg" alt="Логотип сайта об отдыхе в городе Седона: перевёрнутый треугольник голубого цвета со вставкой с изображением местных достопримечательностей и надписью City of Sedona" width="140" height="70">
       </a>
       <nav class="header_nav">
         <ul class="main-nav_list">
@@ -42,7 +42,7 @@
     <main class="main" data-test="main">
       <section class="hero" data-test="hero">
         <h1 class="visually-hidden">Сайт об отдыхе в городе Седона</h1>
-        <img class="hero_image" src="images/index-page/hero-text.svg" alt="Приветственный текст для гостей города Седона на английском языке. Его перевод: добро пожаловать в великолепную Седону, потому что Гранд-Каньон — отстой!" width="458" height="352">
+        <img class="hero_image" src="images/index/hero-text.svg" alt="Приветственный текст для гостей города Седона на английском языке. Его перевод: добро пожаловать в великолепную Седону, потому что Гранд-Каньон — отстой!" width="458" height="352">
       </section>
       <section class="benefits" data-test="advantages">
         <h2 class="visually-hidden">Зачем ехать на отдых в Седону</h2>
@@ -54,7 +54,7 @@
           <li class="benefits_item">
             <h3 class="benefits-item_title">Настоящий городок</h3>
             <p class="benefits-item_description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="benefits-item_image" src="images/index-page/benefits-1.jpg" alt="Здания на одной из улиц Седоны" width="800" height="385">
+            <img class="benefits-item_image" src="images/index/benefits-1.jpg" alt="Здания на одной из улиц Седоны" width="800" height="385">
           </li>
           <li class="benefits_item">
             <h3 class="benefits-item_title">Небольшая площадь</h3>
@@ -71,7 +71,7 @@
           <li class="benefits_item">
             <h3 class="benefits-item_title">Там есть мост дьявола</h3>
             <p class="benefits-item_description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img class="benefits-item_image" src="images/index-page/benefits-2.jpg" alt="Достопримечательность Мост дьявола в Седоне" width="800" height="385">
+            <img class="benefits-item_image" src="images/index/benefits-2.jpg" alt="Достопримечательность Мост дьявола в Седоне" width="800" height="385">
           </li>
         </ul>
       </section>
