--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 <body>
   <header class="header" data-test="header">
     <a class="header-logo_link" href="index.html">
-      <img class="logo_image" src="images/logos/logo-sedona.svg" alt="Логотип сайта об отдыхе в городе Седона: перевёрнутый треугольник голубого цвета со вставкой с изображением местных достопримечательностей и надписью City of Sedona" width="138" height="64">
+      <img class="logo_image" src="images/logos/sedona.svg" alt="Логотип сайта об отдыхе в городе Седона: перевёрнутый треугольник голубого цвета со вставкой с изображением местных достопримечательностей и надписью City of Sedona" width="138" height="64">
     </a>
     <nav class="header_nav">
       <ul class="main-nav_list">
@@ -137,7 +137,7 @@
       <ul class="cards_list">
         <li class="cards_item">
           <a class="item-image_link" href="#">
-            <img class="item_image" src="images/catalog-page/hotel-amara.jpg" alt="Вид на звёздное небо из скальной пещеры" width="300" height="212">
+            <img class="item_image" src="images/catalog/hotel-amara.jpg" alt="Вид на звёздное небо из скальной пещеры" width="300" height="212">
           </a>
           <a class="item-title_link" href="#" target="_blank">
             <h3 class="item_title" lang="en">Amara Resort & Spa</h3>
@@ -153,7 +153,7 @@
         </li>
         <li class="cards_item">
           <a class="item-image_link" href="#">
-            <img class="item_image" src="images/catalog-page/hotel-villas-diablo.jpg" alt="Радуга на фоне каменных останцев в окрестностях Седоны" width="300" height="212">
+            <img class="item_image" src="images/catalog/hotel-villas-diablo.jpg" alt="Радуга на фоне каменных останцев в окрестностях Седоны" width="300" height="212">
           </a>
           <a class="item-title_link" href="#" target="_blank">
             <h3 class="item_title" lang="en">Villas at Poco Diablo</h3>
@@ -169,7 +169,7 @@
         </li>
         <li class="card_item">
           <a class="item-image_link" href="#">
-            <img class="item_image" src="images/catalog-page/hotel-desert.jpg" alt="Красные каменные скалы рядом с Седоной" width="300" height="212">
+            <img class="item_image" src="images/catalog/hotel-desert.jpg" alt="Красные каменные скалы рядом с Седоной" width="300" height="212">
           </a>
           <a class="item-title_link" href="#" target="_blank">
             <h3 class="item_title" lang="en">Desert Quail Inn</h3>
@@ -185,7 +185,7 @@
         </li>
         <li class="card_item">
           <a class="item-image_link" href="#">
-            <img class="item_image" src="images/catalog-page/hotel-greentree.jpg" alt="Отель GreenTree Inn" width="300" height="212">
+            <img class="item_image" src="images/catalog/hotel-greentree.jpg" alt="Отель GreenTree Inn" width="300" height="212">
           </a>
           <a class="item-title_link" href="#" target="_blank">
             <h3 class="item_title" lang="en">GreenTree Inn</h3>
