--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона, главная страница</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="header" data-test="header">
