fix: Вносит корректировки в стилях

--- a/catalog.html
+++ b/catalog.html
@@ -101,11 +101,11 @@
               <legend class="filters_title">Стоимость, ₽:</legend>
               <ul class="filters_list">
                 <li class="filters_item cost-filter_block">
-                  <label class="filter-price_label" for="minprice"> от</label>
+                  <label class="filter-price_label" for="minprice"> От</label>
                   <input class="filter-price_input" id="minprice" type="number" name="min-price" value="0">
                 </li>
                 <li class="filters_item cost-filter_block">
-                  <label class="filter-price_label" for="maxprice"> до</label>
+                  <label class="filter-price_label" for="maxprice"> До</label>
                   <input class="filter-price_input" id="maxprice" type="number" name="max-price" value="9000">
                 </li>
               </ul>
