Вносит правки по замеч., sticky footer, центриров.
Вносит правки по замечаниями, добавляет «стики» футер и центрирование «стакана» с контентом.

--- a/catalog.html
+++ b/catalog.html
@@ -56,7 +56,7 @@
             </li>
           </ul>
           <section>
-            <h2 class="visually-hidden">Критерии выбора гостиницы</h2>
+            <h2 class="visually-hidden subtitle-text">Критерии выбора гостиницы</h2>
             <form class="filters-form" action="https://echo.htmlacademy.ru/" method="get">
               <fieldset class="filters">
                 <legend class="filters-title">Инфраструктура:</legend>
@@ -139,12 +139,12 @@
                 <img class="item-image" src="images/catalog/hotel-amara.jpg" alt="Вид на звёздное небо из скальной пещеры" width="300" height="212">
               </a>
               <a class="item-title-link" href="#" tabindex="-1">
-                <h3 class="item-title" lang="en">Amara Resort & Spa</h3>
+                <h3 class="item-title" lang="en">Amara Resort &amp;&nbsp;Spa</h3>
               </a>
               <p class="item-type">Гостиница</p>
               <p class="item-price">От <span class="item-price-number">4000</span> ₽</p>
               <a class="item-button button" href="#">Подробнее</a>
-              <button class="item-favorites-button button" type="button">В избранное</button>
+              <button class="item-favorites-button button" type="button">В&nbsp;избранное</button>
               <p class="stars four-stars">
                 <span class="visually-hidden">Класс отеля: 4 звезды</span>
               </p>
@@ -155,12 +155,12 @@
                 <img class="item-image" src="images/catalog/hotel-villas-diablo.jpg" alt="Радуга на фоне каменных останцев в окрестностях Седоны" width="300" height="212">
               </a>
               <a class="item-title-link" href="#" tabindex="-1">
-                <h3 class="item-title" lang="en">Villas at Poco Diablo</h3>
+                <h3 class="item-title" lang="en">Villas at&nbsp;Poco Diablo</h3>
               </a>
               <p class="item-type">Гостиница</p>
               <p class="item-price">От <span class="item-price-number">5000</span> ₽</p>
               <a class="item-button button" href="#">Подробнее</a>
-              <button class="item-favorites-button button" type="button">В избранном</button>
+              <button class="item-favorites-button button" type="button">В&nbsp;избранном</button>
               <p class="stars four-stars">
                 <span class="visually-hidden">Класс отеля: 4 звезды</span>
               </p>
@@ -176,7 +176,7 @@
               <p class="item-type">Гостиница</p>
               <p class="item-price">От <span class="item-price-number">2500</span> ₽</p>
               <a class="item-button button" href="#">Подробнее</a>
-              <button class="item-favorites-button button" type="button">В избранное</button>
+              <button class="item-favorites-button button" type="button">В&nbsp;избранное</button>
               <p class="stars three-stars">
                 <span class="visually-hidden">Класс отеля: 3 звезды</span>
               </p>
@@ -192,7 +192,7 @@
               <p class="item-type">Гостиница</p>
               <p class="item-price">От <span class="item-price-number">1500</span> ₽</p>
               <a class="item-button button" href="#">Подробнее</a>
-              <button class="item-favorites-button button" type="button">В избранное</button>
+              <button class="item-favorites-button button" type="button">В&nbsp;избранное</button>
               <p class="stars two-stars">
                 <span class="visually-hidden">Класс отеля: 2 звезды</span>
               </p>
@@ -221,8 +221,8 @@
           </ul>
         </section>
         <section class="subscribe" data-test="subscribe">
-          <h2 class="subscribe-title subtitle-text">Подпишитесь на рассылку</h2>
-          <p class="subscribe-description description-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <h2 class="subscribe-title subtitle-text">Подпишитесь на&nbsp;рассылку</h2>
+          <p class="subscribe-description">Только полезная информация и&nbsp;никакого спама, честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <label for="email-form">Ваш e-mail</label>
             <input type="email" name="email-form" id="email-form" placeholder="yourmail@mail.com" required>
