--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
       </header>
       <main class="main" data-test="main">
         <section class="hero" data-test="hero">
-          <h1 class="visually-hidden">Сайт об отдыхе в городе Седона</h1>
-          <img class="hero-image" src="images/hero-text.svg" alt="Приветственный текст для гостей города Седона на английском языке. Его перевод: добро пожаловать в великолепную Седону, потому что Гранд-Каньон — отстой!" width="458" height="352">
+          <h1 class="visually-hidden">Сайт об&nbsp;отдыхе в&nbsp;городе Седона</h1>
+          <img class="hero-image" src="images/hero-text.svg" alt="Приветственный текст для гостей города Седона: Welcome to the gorgeous Sedona because the Grand Canyon sucks!" width="458" height="352">
         </section>
         <section class="benefits" data-test="advantages">
-          <h2 class="visually-hidden">Зачем ехать на отдых в Седону</h2>
+          <h2 class="visually-hidden subtitle-text">Зачем ехать на&nbsp;отдых в&nbsp;Седону</h2>
           <div class="benefits-intro-container">
-            <p class="benefits-intro-subtitle subtitle-text">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-            <p class="benefits-intro-text description-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+            <p class="benefits-intro-subtitle subtitle-text">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
+            <p class="benefits-intro-text">Рассмотрим причины, по&nbsp;которым Седона круче, чем Гранд-Каньон!</p>
           </div>
           <ul class="benefits-list">
             <li class="benefits-item benefits-special">
               <h3 class="benefits-item-title">Настоящий городок</h3>
-              <p class="benefits-item-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <p class="benefits-item-description">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
               <img class="benefits-item-image" src="images/benefits-1.jpg" alt="Здания на одной из улиц Седоны" width="800" height="385">
             </li>
             <li class="benefits-item">
@@ -64,48 +64,48 @@
             </li>
             <li class="benefits-item">
               <h3 class="benefits-item-title">Красивая дорога</h3>
-              <p class="benefits-item-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <p class="benefits-item-description">Ехать в&nbsp;Седону из&nbsp;Лас-Вегаса совсем не&nbsp;скучно!</p>
             </li>
             <li class="benefits-item">
               <h3 class="benefits-item-title">Мало туристов</h3>
-              <p class="benefits-item-description">Большинство едет в Гранд-Каньон и толпится там</p>
+              <p class="benefits-item-description">Большинство едет в&nbsp;Гранд-Каньон и&nbsp;толпится там</p>
             </li>
             <li class="benefits-item benefits-special">
               <h3 class="benefits-item-title">Там есть Мост дьявола</h3>
-              <p class="benefits-item-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <p class="benefits-item-description">Да, по&nbsp;нему можно пройти! Если вы&nbsp;осмелитесь, разумеется</p>
               <img class="benefits-item-image" src="images/benefits-2.jpg" alt="Достопримечательность Мост дьявола в Седоне" width="800" height="385">
             </li>
           </ul>
         </section>
-        <section class="servise">
-          <div class="servise-intro-container">
-            <h2 class="visually-hidden">Услуги для туристов в городе Седона</h2>
-            <p class="servise-intro-subtitle subtitle-text">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
-            <p class="servise-intro-description">Опытный персонал и качественное обслуживание!</p>
+        <section class="service">
+          <div class="service-intro-container">
+            <h2 class="visually-hidden subtitle-text">Услуги для туристов в&nbsp;городе Седона</h2>
+            <p class="service-intro-subtitle subtitle-text">Приезжайте в&nbsp;Седону отдохнуть в&nbsp;комфорте и&nbsp;уюте!</p>
+            <p class="service-intro-description">Опытный персонал и&nbsp;качественное обслуживание!</p>
           </div>
-          <ul class="servise-list">
-            <li class="servise-item">
-              <h3 class="servise-item-title">Жильё</h3>
-              <p class="servise-item-description">Рекомендуем пожить в настоящем мотеле: всё как в кино!</p>
+          <ul class="service-list">
+            <li class="service-item">
+              <h3 class="service-item-title">Жильё</h3>
+              <p class="service-item-description">Рекомендуем пожить в&nbsp;настоящем мотеле: всё как в&nbsp;кино!</p>
             </li>
-            <li class="servise-item">
-              <h3 class="servise-item-title">Еда</h3>
-              <p class="servise-item-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <li class="service-item">
+              <h3 class="service-item-title">Еда</h3>
+              <p class="service-item-description">Всегда заказывайте топовый фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
             </li>
-            <li class="servise-item">
-              <h3 class="servise-item-title">Сувениры</h3>
-              <p class="servise-item-text">Не только китайского, но и настоящего местного производства!</p>
+            <li class="service-item">
+              <h3 class="service-item-title">Сувениры</h3>
+              <p class="service-item-text">Не&nbsp;только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
             </li>
           </ul>
         </section>
         <section class="search" data-test="search">
           <h2 class="search-subtitle subtitle-text">Заинтересовались?</h2>
-          <p class="search-description description-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="search-link button" href="#">Поиск гостиницы в Седоне</a>
+          <p class="search-description">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
+          <a class="search-link button" href="#">Поиск гостиницы в&nbsp;Седоне</a>
         </section>
         <section class="subscribe subscribe-special" data-test="subscribe">
-          <h2 class="subscribe-title subtitle-text">Подпишитесь на рассылку</h2>
-          <p class="subscribe-description description-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <h2 class="subscribe-title subtitle-text">Подпишитесь на&nbsp;рассылку</h2>
+          <p class="subscribe-description">Только полезная информация и&nbsp;никакого спама, честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
             <label for="email-form">Ваш e-mail</label>
             <input type="email" name="email-form" id="email-form" placeholder="yourmail@mail.com" required>
