--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
         <section class="benefits" data-test="advantages">
           <h2 class="visually-hidden subtitle-text">Зачем ехать на&nbsp;отдых в&nbsp;Седону</h2>
           <div class="benefits-intro-container">
-            <p class="benefits-intro-subtitle subtitle-text">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
-            <p class="benefits-intro-text">Рассмотрим причины, по&nbsp;которым Седона круче, чем Гранд-Каньон!</p>
+            <div class="content-wrapper">
+              <p class="benefits-intro-subtitle subtitle-text">Седона&nbsp;&mdash; небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
+              <p class="benefits-intro-text">Рассмотрим причины, по&nbsp;которым Седона круче, чем Гранд-Каньон!</p>
+            </div>
           </div>
           <ul class="benefits-list">
             <li class="benefits-item benefits-special">
@@ -79,38 +81,50 @@
         </section>
         <section class="service">
           <div class="service-intro-container">
-            <h2 class="visually-hidden subtitle-text">Услуги для туристов в&nbsp;городе Седона</h2>
-            <p class="service-intro-subtitle subtitle-text">Приезжайте в&nbsp;Седону отдохнуть в&nbsp;комфорте и&nbsp;уюте!</p>
-            <p class="service-intro-description">Опытный персонал и&nbsp;качественное обслуживание!</p>
+            <div class="content-wrapper">
+              <h2 class="visually-hidden subtitle-text">Услуги для туристов в&nbsp;городе Седона</h2>
+              <p class="service-intro-subtitle subtitle-text">Приезжайте в&nbsp;Седону отдохнуть в&nbsp;комфорте и&nbsp;уюте!</p>
+              <p class="service-intro-description">Опытный персонал и&nbsp;качественное обслуживание!</p>
+            </div>
           </div>
           <ul class="service-list">
             <li class="service-item">
-              <h3 class="service-item-title">Жильё</h3>
-              <p class="service-item-description">Рекомендуем пожить в&nbsp;настоящем мотеле: всё как в&nbsp;кино!</p>
+              <div class="content-item-wrapper">
+                <h3 class="service-item-title">Жильё</h3>
+                <p class="service-item-description">Рекомендуем пожить в&nbsp;настоящем мотеле: всё как в&nbsp;кино!</p>
+              </div>
             </li>
             <li class="service-item">
-              <h3 class="service-item-title">Еда</h3>
-              <p class="service-item-description">Всегда заказывайте топовый фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+              <div class="content-item-wrapper">
+                <h3 class="service-item-title">Еда</h3>
+                <p class="service-item-description">Всегда заказывайте топовый фирменный бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+              </div>
             </li>
             <li class="service-item">
-              <h3 class="service-item-title">Сувениры</h3>
-              <p class="service-item-text">Не&nbsp;только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
+              <div class="content-item-wrapper">
+                <h3 class="service-item-title">Сувениры</h3>
+                <p class="service-item-text">Не&nbsp;только китайского, но&nbsp;и&nbsp;настоящего местного производства!</p>
+              </div>
             </li>
           </ul>
         </section>
         <section class="search" data-test="search">
-          <h2 class="search-subtitle subtitle-text">Заинтересовались?</h2>
-          <p class="search-description">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
-          <a class="search-link button" href="#">Поиск гостиницы в&nbsp;Седоне</a>
+          <div class="content-wrapper">
+            <h2 class="search-subtitle subtitle-text">Заинтересовались?</h2>
+            <p class="search-description">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
+            <a class="search-link button" href="#">Поиск гостиницы в&nbsp;Седоне</a>
+          </div>
         </section>
         <section class="subscribe subscribe-special" data-test="subscribe">
-          <h2 class="subscribe-title subtitle-text">Подпишитесь на&nbsp;рассылку</h2>
-          <p class="subscribe-description">Только полезная информация и&nbsp;никакого спама, честное бойскаутское!</p>
-          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label for="email-form">Ваш e-mail</label>
-            <input type="email" name="email-form" id="email-form" placeholder="yourmail@mail.com" required>
-            <button class="subscribe-form-button button" type="submit">Подписаться</button>
-          </form>
+          <div class="content-wrapper">
+            <h2 class="subscribe-title subtitle-text">Подпишитесь на&nbsp;рассылку</h2>
+            <p class="subscribe-description">Только полезная информация и&nbsp;никакого спама, честное бойскаутское!</p>
+          </div>
+            <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label for="email-form">Ваш e-mail</label>
+              <input type="email" name="email-form" id="email-form" placeholder="yourmail@mail.com" required>
+              <button class="subscribe-form-button button" type="submit">Подписаться</button>
+            </form>
         </section>
       </main>
       <footer class="footer" data-test="footer">
